// Copyright 2021 Google LLC. All Rights Reserved.
// 
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
// 
//     http://www.apache.org/licenses/LICENSE-2.0
// 
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";

package dcl;

import "proto/connector/sdk.proto";
import "proto/empty.proto";

message ComputeTargetHttpProxy {
  int64 id = 1;
  string name = 2;
  string description = 3;
  string self_link = 4;
  string url_map = 5;
  string project = 6;
}

message ApplyComputeTargetHttpProxyRequest {
  ComputeTargetHttpProxy resource = 1;
  repeated LifecycleDirective lifecycle_directives = 2;
  string service_account_file = 3;
}

message DeleteComputeTargetHttpProxyRequest {
  string service_account_file = 1;
  ComputeTargetHttpProxy resource = 2;
}

message ListComputeTargetHttpProxyRequest {
  string service_account_file = 1;
  string Project = 2;
}

message ListComputeTargetHttpProxyResponse {
  repeated ComputeTargetHttpProxy items = 1;
}

service ComputeTargetHttpProxyService {
  rpc ApplyComputeTargetHttpProxy(ApplyComputeTargetHttpProxyRequest) returns (ComputeTargetHttpProxy);
  rpc DeleteComputeTargetHttpProxy(DeleteComputeTargetHttpProxyRequest) returns (google.protobuf.Empty);
  rpc ListComputeTargetHttpProxy(ListComputeTargetHttpProxyRequest) returns (ListComputeTargetHttpProxyResponse);
}
